--- a/post.hbs
+++ b/post.hbs
@@ -74,8 +74,8 @@
 
         </footer>
 
-        <section>
-
+        <section class="comments">
+          <span class="dot"></span>
           <div id="disqus_thread"></div>
           <script type="text/javascript">
             (function() {
